--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./assets/css/styles.css">
-    <title>Kranewwitter Paulo Daniel | Portfolio</title>
+    <title>Kranewitter Paulo Daniel | Portfolio</title>
 </head>
+
 <body>
 
     <nav>
@@ -17,24 +18,24 @@
             <li><a href="#contacto" class="nav-link">Contacto</a></li>
         </ul>  
         <button class="menu-hamburguesa" id="menu-hamburguesa">
-          <ion-icon class="barras" name="menu-outline"></ion-icon>
+            <ion-icon class="barras" name="menu-outline"></ion-icon>
         </button>
     </nav>
 
     <section class="presentacion" id="presentacion">
         <img
-          src="/assets/imagenes/paulo.png"
-          alt="Kranewitter Paulo Daniel"
-          loading="lazy"  
+        src="/assets/imagenes/paulo.png"
+        alt="Kranewitter Paulo Daniel"
+        loading="lazy"  
         />
         <div class="hola">
-          <h3>Hola, soy Kranewitter Paulo Daniel.</h3>
-          <h4>¡ Bienvenido a mi página web personal !</h4>
-          <p>
+        <h3>Hola, soy Kranewitter Paulo Daniel.</h3>
+        <h4>¡ Bienvenido a mi página web personal !</h4>
+        <p>
             En este espacio, compartiré contigo detalles sobre mi trayectoria y logros en el ámbito profesional. 
             Cada paso que he dado ha sido una oportunidad para aprender y crecer.
             Aunque no sé cuánto tiempo tomará alcanzar mis sueños, lo que sí sé es que nunca me rendiré.
-          </p>
+        </p>
         </div>
     </section>
 
@@ -54,28 +55,22 @@
         </p>
     </section>
 
-    <section class="habilidades" id="habilidad">
-        <h2 class="header-habilidadr">Mis habilidades</h2>
-        <div class="contenedor-habilidad">
-            <div>
-                <img src="assets/iconos/html.jpg" alt="HTML" loading="lazy" class="tarjeta-icono"/>
-                <img src="assets/iconos/css.jpg"  alt="CSS" loading="lazy" class="tarjeta-icono"/>
-                <img src="assets/iconos/B.jpg" alt="BOOTSTRAP" loading="lazy" class="tarjeta-icono"/>
-            </div>
-            <div>
-                <img src="assets/iconos/js.jpg" alt="JAVASCRIPT" loading="lazy" class="tarjeta-icono"/>
-                <img src="assets/iconos/python.jpg"  alt="PYTHON" loading="lazy" class="tarjeta-icono"/>
-                <img src="assets/iconos/mysql.jpg" alt="MYSQL" loading="lazy" class="tarjeta-icono"/>
-            </div>
-            <div>
-                <img src="assets/iconos/PS.jpg" alt="PHOTOSHOP" loading="lazy" class="tarjeta-icono"/>
-                <img src="assets/iconos/Ai.jpg"  alt="ADOBE ILLUSTRATOR" loading="lazy" class="tarjeta-icono"/>
-                <img src="assets/iconos/Ae.jpg" alt="AFTER EFFECTS" loading="lazy" class="tarjeta-icono"/>
-            </div>
-            <div>
-                <img src="assets/iconos/git.jpg" alt="GIT" loading="lazy" class="tarjeta-icono"/>
-                <img src="assets/iconos/github.jpg"  alt="GITHUB" loading="lazy" class="tarjeta-icono"/>
-            </div>
+    <section class="contenedor-habilidad" id="habilidad">
+        <h2>Mis habilidades</h2>
+        <div>
+            <img src="assets/iconos/html.jpg" alt="HTML" loading="lazy" class="tarjeta-icono"/>
+            <img src="assets/iconos/css.jpg"  alt="CSS" loading="lazy" class="tarjeta-icono"/>
+            <img src="assets/iconos/B.jpg" alt="BOOTSTRAP" loading="lazy" class="tarjeta-icono"/>
+            <img src="assets/iconos/js.jpg" alt="JAVASCRIPT" loading="lazy" class="tarjeta-icono"/>
+            <img src="assets/iconos/python.jpg"  alt="PYTHON" loading="lazy" class="tarjeta-icono"/>
+            <img src="assets/iconos/mysql.jpg" alt="MYSQL" loading="lazy" class="tarjeta-icono"/>
+        </div>
+        <div>
+            <img src="assets/iconos/PS.jpg" alt="PHOTOSHOP" loading="lazy" class="tarjeta-icono"/>
+            <img src="assets/iconos/Ai.jpg"  alt="ADOBE ILLUSTRATOR" loading="lazy" class="tarjeta-icono"/>
+            <img src="assets/iconos/Ae.jpg" alt="AFTER EFFECTS" loading="lazy" class="tarjeta-icono"/>
+            <img src="assets/iconos/git.jpg" alt="GIT" loading="lazy" class="tarjeta-icono"/>
+            <img src="assets/iconos/github.jpg"  alt="GITHUB" loading="lazy" class="tarjeta-icono"/>
         </div>
     </section>
 
