--- a/index.html
+++ b/index.html
@@ -1,172 +1,176 @@
 <!DOCTYPE html>
 <html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./assets/css/styles.css">
-    <title>Kranewitter Paulo Daniel | Portfolio</title>
-</head>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="./assets/css/styles.css">
+        <title>Kranewitter Paulo Daniel | Portfolio</title>
+    </head>
 
-<body>
+    <body>
 
-    <nav>
-        <h1>Kranewitter Paulo Daniel</h1>
-        <ul class="navegacion">
-            <li><a href="#presentacion" class="nav-link">Presentación</a></li>
-            <li><a href="#habilidad" class="nav-link">Habilidades</a></li>
-            <li><a href="#proyectos" class="nav-link">Proyectos</a></li>
-            <li><a href="#contacto" class="nav-link">Contacto</a></li>
-        </ul>  
-        <button class="menu-hamburguesa" id="menu-hamburguesa">
-            <ion-icon class="barras" name="menu-outline"></ion-icon>
-        </button>
-    </nav>
+        <nav>
+            <h1><strong>Kranewitter Paulo Daniel</strong></h1>
+            <ul>
+                <li><a href="#presentacion" class="nav-link">Presentación</a></li>
+                <li><a href="#sobreMi" class="nav-link">Sobre mi</a></li>
+                <li><a href="#habilidad" class="nav-link">Habilidades</a></li>
+                <li><a href="#proyecto" class="nav-link">Proyectos</a></li>
+                <li><a href="#contacto" class="nav-link">Contacto</a></li>
+            </ul>  
+        </nav>
 
-    <section class="presentacion" id="presentacion">
-        <img
-        src="/assets/imagenes/paulo.png"
-        alt="Kranewitter Paulo Daniel"
-        loading="lazy"  
-        />
-        <div class="hola">
-        <h3>Hola, soy Kranewitter Paulo Daniel.</h3>
-        <h4>¡ Bienvenido a mi página web personal !</h4>
-        <p>
-            En este espacio, compartiré contigo detalles sobre mi trayectoria y logros en el ámbito profesional. 
-            Cada paso que he dado ha sido una oportunidad para aprender y crecer.
-            Aunque no sé cuánto tiempo tomará alcanzar mis sueños, lo que sí sé es que nunca me rendiré.
-        </p>
-        </div>
-    </section>
-
-    <section class="mas-sobre">
-        <h2>Más sobre mí</h2>
-        <p>
-            Actualmente, me encuentro cursando el segundo año de la tecnicatura superior en desarrollo web y aplicaciones digitales en el Instituto Politécnico de Córdoba. 
-            Además, cuento con una tecnicatura en diseño y animación digital que obtuve en la reconocida Universidad Siglo 21 en el año 2021, y poseo conocimientos básicos en inglés.
+        <section class="presentacion" id="presentacion">
+            <div>
+                <h3>Hola, soy <strong>Kranewitter Paulo Daniel</strong></h3>
+                <h4>¡ Bienvenido a mi página web personal !</h4>
+                <p>
+                    En este espacio, compartiré contigo detalles sobre mi trayectoria y logros en el ámbito profesional. 
+                    Cada paso que he dado ha sido una oportunidad para aprender y crecer.
+                    Aunque no sé cuánto tiempo tomará alcanzar mis sueños, lo que sí sé es que nunca me rendiré.
+                </p>
+            </div>
+            <img
+                src="/assets/imagenes/paulo.png"
+                alt="Kranewitter Paulo Daniel"
+                loading="lazy"  
+            />
+        </section>
         
-        </p>
-        <p>
-            Considero que mi personalidad cooperativa y curiosa me impulsa constantemente a aprender y mejorar, siempre estoy en busca de oportunidades para formarme y crecer profesionalmente.
-        </p>
-        <p>
-            Mi objetivo es encontrar una empresa que me brinde la oportunidad de seguir evolucionando en el fascinante mundo del desarrollo web. 
-            Estoy dispuesto a involucrarme y a poner todo el esfuerzo necesario para alcanzar los objetivos propuestos.
-        </p>
-    </section>
+        <section class="sobreMi" id="sobreMi">
+            <h2><strong>Más sobre mí</strong></h2>
+            <p>
+                Actualmente, me encuentro cursando el segundo año de la tecnicatura superior en desarrollo web y aplicaciones digitales en el Instituto Politécnico de Córdoba. 
+                Además, cuento con una tecnicatura en diseño y animación digital que obtuve en la reconocida Universidad Siglo 21 en el año 2021, y poseo conocimientos básicos en inglés.
+                Considero que mi personalidad cooperativa y curiosa me impulsa constantemente a aprender y mejorar, siempre estoy en busca de oportunidades para formarme y crecer profesionalmente.
+                Mi objetivo es encontrar una empresa que me brinde la oportunidad de seguir evolucionando en el fascinante mundo del desarrollo web. 
+                Estoy dispuesto a involucrarme y a poner todo el esfuerzo necesario para alcanzar los objetivos propuestos.
+            </p>
+        </section>
 
-    <section class="contenedor-habilidad" id="habilidad">
-        <h2>Mis habilidades</h2>
-        <div>
-            <img src="assets/iconos/html.jpg" alt="HTML" loading="lazy" class="tarjeta-icono"/>
-            <img src="assets/iconos/css.jpg"  alt="CSS" loading="lazy" class="tarjeta-icono"/>
-            <img src="assets/iconos/B.jpg" alt="BOOTSTRAP" loading="lazy" class="tarjeta-icono"/>
-            <img src="assets/iconos/js.jpg" alt="JAVASCRIPT" loading="lazy" class="tarjeta-icono"/>
-            <img src="assets/iconos/python.jpg"  alt="PYTHON" loading="lazy" class="tarjeta-icono"/>
-            <img src="assets/iconos/mysql.jpg" alt="MYSQL" loading="lazy" class="tarjeta-icono"/>
-        </div>
-        <div>
-            <img src="assets/iconos/PS.jpg" alt="PHOTOSHOP" loading="lazy" class="tarjeta-icono"/>
-            <img src="assets/iconos/Ai.jpg"  alt="ADOBE ILLUSTRATOR" loading="lazy" class="tarjeta-icono"/>
-            <img src="assets/iconos/Ae.jpg" alt="AFTER EFFECTS" loading="lazy" class="tarjeta-icono"/>
-            <img src="assets/iconos/git.jpg" alt="GIT" loading="lazy" class="tarjeta-icono"/>
-            <img src="assets/iconos/github.jpg"  alt="GITHUB" loading="lazy" class="tarjeta-icono"/>
-        </div>
-    </section>
+        <section class="habilidades" id="habilidad">
+            <h2><strong>Mis habilidades</strong></h2>
+            <div class="icono-habilidades">
+                <img 
+                    src="assets/iconos/html.jpg" 
+                    alt="HTML" 
+                    loading="lazy" 
+                />
+                <img 
+                    src="assets/iconos/css.jpg"  
+                    alt="CSS" 
+                    loading="lazy" 
+                />
+                <img
+                    src="assets/iconos/B.jpg" 
+                    alt="BOOTSTRAP" 
+                    loading="lazy" 
+                />
+                <img 
+                    src="assets/iconos/js.jpg" 
+                    alt="JAVASCRIPT" 
+                    loading="lazy" 
+                />
+                <img 
+                    src="assets/iconos/python.jpg"  
+                    alt="PYTHON" 
+                    loading="lazy" 
+                />
+                <img 
+                    src="assets/iconos/mysql.jpg" 
+                    alt="MYSQL" 
+                    loading="lazy" 
+                />
+        
+                <img 
+                    src="assets/iconos/PS.jpg" 
+                    alt="PHOTOSHOP" 
+                    loading="lazy" 
+                />
+                <img 
+                    src="assets/iconos/Ai.jpg"  
+                    alt="ADOBE ILLUSTRATOR" 
+                    loading="lazy" 
+                />
+                <img 
+                    src="assets/iconos/Ae.jpg"
+                    alt="AFTER EFFECTS" 
+                    loading="lazy" 
+                />
+                <img 
+                    src="assets/iconos/git.jpg" 
+                    alt="GIT"
+                    loading="lazy" 
+                />
+                <img 
+                    src="assets/iconos/github.jpg"  
+                    alt="GITHUB" loading="lazy" 
+                />
+            </div>
+        </section>
 
-    <section class="proyectos" id="proyectos">
-        <h2 class="titulo-de-proyectos">Algunos de mis proyectos </h2>
-        <div class="contenedor-de-proyectos">
+        <section class="proyectos" id="proyecto">
+            <h2 ><strong>Algunos de mis proyectos</strong></h2>
             <div class="tarjeta-de-proyecto">
-                <img src="assets/imagenes/Jueguito.jpg" alt="Tarjeta" loading="lazy" class="project-pic"/>
-                <h3 class="titulo-de-proyecto">Videos juegos</h3>
-                <p class="detalles-de-proyecto">
-                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quas
-                    ratione vel inventore labore commodi modi quos culpa aut saepe!
-                    Alias!
-                </p>
-                <a href="#" target="_blank" class="enlace-de-proyecto">¡Échale un vistazo!</a>
-            </div>
-            <div class="tarjeta-de-proyecto">
-                <img src="assets/imagenes/ecommerce.jpg" alt="Tarjeta" loading="lazy" class="project-pic"/>
-                <h3 class="titulo-de-proyecto">E-commerce</h3>
-                <p class="detalles-de-proyecto">
-                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quas
-                    ratione vel inventore labore commodi modi quos culpa aut saepe!
-                    Alias!
-                </p>
-                <a href="#" target="_blank" class="enlace-de-proyecto">¡Échale un vistazo!</a>
-            </div>
-            <div class="tarjeta-de-proyecto">
-                    <img src="assets/imagenes/tarjeta.jpg" alt="Tarjeta" loading="lazy" class="project-pic"/>
-                    <h3 class="titulo-de-proyecto">Tarjetas animadas</h3>
-                    <p class="detalles-de-proyecto">
+                <div>
+                    <img src="assets/imagenes/Jueguito.jpg"
+                        alt="Tarjeta" 
+                        loading="lazy" 
+                    />
+                    <h3><strong>Videos juegos</strong></h3>
+                    <p >
                         Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quas
                         ratione vel inventore labore commodi modi quos culpa aut saepe!
                         Alias!
                     </p>
-                    <a href="#" target="_blank" class="enlace-de-proyecto">¡Échale un vistazo!</a>
-            </div>
-        </div>
-    </section>
-
-    <section class="contacto" id="contacto">
-        <h2>Contactarme</h2>
-        <div class="formulario-contacto-contenedor">
-            <div class="formulario-contacto">
-                <form action="" method="POST">
-                <div class="control-formulario">
-                    <label for="name">Nombre</label>
-                    <input
-                        type="text"
-                        id="name"
-                        name="sender-name"
-                        placeholder="Escribe tu nombre"
-                        class="input-field"
-                        required
+                    <a href="#" target="_blank" >¡Échale un vistazo!</a>
+                </div>
+                <div>
+                    <img 
+                        src="assets/imagenes/ecommerce.jpg" 
+                        alt="Tarjeta" 
+                        loading="lazy" 
                     />
+                    <h3><strong>E-commerce</strong></h3>
+                    <p>
+                        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quas
+                        ratione vel inventore labore commodi modi quos culpa aut saepe!
+                        Alias!
+                    </p>
+                    <a href="#" target="_blank">¡Échale un vistazo!</a>
                 </div>
-                <div class="control-formulario">
-                    <label for="email">Correo Electrónico</label>
-                    <input
-                        type="email"
-                        id="email"
-                        name="sender-email"
-                        placeholder="Ingreso tu correo electrónico"
-                        class="input-field"
-                        required
+                <div>
+                    <img 
+                        src="assets/imagenes/tarjeta.jpg" 
+                        alt="Tarjeta" 
+                        loading="lazy" 
                     />
+                    <h3><strong>Tarjetas animadas</strong></h3>
+                        <p>
+                            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quas
+                            ratione vel inventore labore commodi modi quos culpa aut saepe!
+                            Alias!
+                        </p>
+                        <a href="#" target="_blank">¡Échale un vistazo!</a>
                 </div>
-                <div class="control-formulario">
-                    <label for="mensaje">Mensaje</label>
-                    <textarea
-                        id="mensaje"
-                        cols="60"
-                        rows="10"
-                        placeholder="Escribe tu mensaje"
-                        name="mensaje"
-                        class="input-field"
-                        required
-                    ></textarea>
-                </div>
-                <input
-                    type="submit"
-                    value="Enviar"
-                    id="submit-btn"
-                    class="submit-btn"
-                />
-                </form>
             </div>
-        </div>
-    </section>
+        </section>
 
-    <footer>
-        <div class="sociales">
+        <section class="contactos" id="contacto">
+            <h2><strong>Contactarme</strong></h2>
+            <div>
+                <img src="assets/iconos/icons8-phone-call-64.png" alt="Telefono">   
+                <p>03446-15541863</p>
+                <img src="assets/iconos/icons8-gmail.gif" alt="Email">
+                <p>paulo211082@gmail.com</p>
+            </div>
+        </section>
+
+        <footer>
             <a href="#" target="_blank">
                 <img src="assets/iconos/icons8-facebook.gif" 
                     alt="FACEBOOK" 
                     loading="lazy"
-                    class="socicon"
                 />
             </a>
             <a href="#" target="_blank">
@@ -174,7 +178,6 @@
                     src="assets/iconos/icons8-instagram.gif"
                     alt="INSTAGRAM"
                     loading="lazy"
-                    class="socicon"
                 />
             </a>
             <a href="#" target="_blank">
@@ -182,28 +185,15 @@
                     src="assets/iconos/icons8-linkedin.gif"
                     alt="LINKEDIN"
                     loading="lazy"
-                    class="socicon"
                 />
             </a>
-            <a href="#" target="_blank">
+            <a href="https://github.com/PauloKrane" target="_blank">
                 <img
                     src="assets/iconos/icons8-github.gif"
                     alt="GITHUB"
                     loading="lazy"
-                    class="socicon"
                 />
             </a>
-            <i class="desplazarse-hacia-arriba" id="desplazarse-hacia-arriba">
-                <img
-                    src="assets/iconos/icons8-scroll-up-64.png"
-                    class="socicon up-arrow"
-                    alt="desplazarse-hacia-arriba"
-                />
-            </i>
-        </div>
-    </footer>
-
-    <script src="assets/js/app.js"></script>
-
-</body>
+        </footer>
+    </body>
 </html>
